Refactor [#51] : 메서드명 수정 및 코드 리팩토링